# crewai-latex-project

./: .coverage  .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  refactor-150-lines.patch  requirements.txt
docs/: BUDGET.md  ISSUES.md  PLAN.md  PRD.md  TODO.md
docs/screenshots/: .gitkeep
latex/: main.tex  references.bib
latex/chapters/: abstract.tex  ch01_intro.tex  ch02_architecture.tex  ch02_bio_basis.tex  ch03_frameworks.tex  ch03_sensors.tex  ch04_protocols.tex  ch04_slam.tex  ch05_fusion.tex  ch05_security.tex  ch06_algorithm.tex  ch06_deployment.tex  ch07_our_system.tex  ch07_oursystem.tex  ch08_results.tex  ch09_conclusion.tex  cover.tex
outputs/: current_run_folder.txt  figures_manifest.md  paper_outline.md  quality_report.md  research_briefs.md  token_report.md
src/: __init__.py  config.py  config_validation.py  crew.py  crew_fixer.py  crew_legacy.py  stubs.py
src/agents/: __init__.py  aerospace_marine_expert.py  aerospace_marine_expert_prompts.py  algorithms_expert.py  biology_expert.py  biology_expert_prompts.py  control_systems_expert.py  hebrew_academic_writer.py  latex_author.py  latex_author_prompts.py  ml_expert.py  navigation_director.py  physics_expert.py  quality_editor.py  signal_processing_expert.py  slam_researcher.py  vision_ai_expert.py  visualization_engineer.py
src/graph/: __init__.py  navigator_graph.py  nodes.py  nodes_quality.py  nodes_quality_report.py  nodes_remediation.py  nodes_validation.py  state.py
src/pipeline/: __init__.py  figure_renderer.py  figure_renderer_ext.py  figure_renderer_extra.py  figures.py  latex_compiler.py  run_manager.py  sanitizer.py  sanitizer_core.py  sanitizer_figures.py  sanitizer_math.py
src/runner/: __init__.py  chapters.py  compile.py  dryrun.py  figure_styles_a.py  figure_styles_b.py  figure_styles_c.py  figures.py  finalize.py  run_folder.py  sanitize.py  sanitize_content.py  sanitize_final.py  sanitize_structure.py  tex_math.py
src/shared/: __init__.py  version.py
src/tasks/: __init__.py  domain_tasks.py  domains.py  latex_split_tasks.py  latex_tasks.py  orchestration.py  research_tasks.py  review_tasks.py  smoke_tasks.py  staging.py  task_persistence.py  tasks_assemble.py  tasks_domain.py  (+8 more)
tests/: conftest.py  conftest_data.py  fixture_data.py  test_agents.py  test_agents_tasks_extra.py  test_agents_tasks_extra_b.py  test_compile_dryrun.py  test_compile_dryrun_b.py  test_config.py  test_config_ext.py  test_crew.py  test_crew_builders.py  test_figures_pipeline.py  test_graph_routing.py  test_latex_compiler.py  test_latex_sources.py  test_nodes_config_extra.py  test_nodes_extended.py  test_quality_gate.py  test_quality_gate_b.py  test_quality_gate_ext.py  test_run_archive.py  test_run_archive_b.py  test_sanitizer_ext.py  test_stubs.py  test_stubs_figures.py  test_stubs_figures_b.py  test_tasks.py  test_tasks_b.py  test_tasks_pipeline.py  test_token_accountant.py  test_token_accountant_full.py  test_token_accountant_full_b.py  test_tools.py  test_tools_code_executor.py  test_tools_extended.py  test_tools_file.py  test_tools_network.py  test_tools_network_b.py  test_validate_chapters.py
(+269 files in other folders)
