[project]
name = "navigatorcrew"
version = "0.1.0"
description = "Autonomous multi-agent research platform that produces compiled IEEE-formatted bilingual (Hebrew/English) academic papers via LangGraph + CrewAI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Naji Kayal" },
    { name = "Amjad Abd Alrahim" },
]

# Runtime dependencies. Kept in sync with requirements.txt (pip install path
# remains supported); uv reads these to produce uv.lock.
dependencies = [
    # --- Core AI Framework ---
    "crewai>=0.80.0",
    "crewai-tools>=0.15.0",
    # --- LLM Providers ---
    "anthropic>=0.40.0",
    "openai>=1.35.0",
    # --- Memory / Vector Store ---
    "chromadb>=0.5.0",
    "langchain-openai>=0.1.0",
    # --- Research Tools ---
    "arxiv>=2.1.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    # --- Data & Visualization ---
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "scipy>=1.13.0",
    # --- Web Interface ---
    "streamlit>=1.35.0",
    # --- Environment & Configuration ---
    "python-dotenv>=1.0.0",
    # --- Utilities ---
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "loguru>=0.7.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
navigatorcrew = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["outputs", "venv", ".venv", "latex"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (line length) is handled by the formatter; keep lint focused on logic.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ modules re-export their public API; the imports are
# intentional even though they are not used within the __init__ itself.
"__init__.py" = ["F401"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src", "main"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
# Conventional exclusions: lines that are not meaningfully unit-testable.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",   # module self-test/demo blocks
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
